--- a/views/Usuarios.handlebars
+++ b/views/Usuarios.handlebars
@@ -14,6 +14,10 @@
         <td>{{this.nome}}</td>
         <td>
             <a href="/usuarios/{{this.id}}/atualizar">Atualizar</a>
+            <form action="/usuarios/excluir" method="post">
+                <input type="text" value="{{this.id}}">
+                <input type="submit" value="Excluir">
+            </form>
         </td>
     </tr>
  {{/each}}
