projeto playtowin final

--- a/views/formJogo.handlebars
+++ b/views/formJogo.handlebars
@@ -25,6 +25,11 @@
             <input type="text" id="precoBase" name="precoBase">
         </div>
         <input type="submit" value="Cadastrar"/>
+        {{#if jogo}}
+        <input type="submit" value="Salvar" />
+        {{else}}
+        <input type="submit" value="Cadastrar" />
+        {{/if}}
     </form>
 </body>
 </html>
