--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -9,7 +9,7 @@
       <a href="/">  <h1>Play TO Win</h1> </a>
         <nav>
             <a href="/usuarios">Usuario</a> 
-            <a href="#">Jogos</a>
+            <a href="jogos">Jogos</a>
         </nav>
     </header>
     <main>
