--- a/views/Usuarios.handlebars
+++ b/views/Usuarios.handlebars
@@ -1,24 +1,26 @@
 <h1>Cadastre-se</h1>
 
-<a href="'/usuarios/novo"> Cadastrar Usuario</a>
+<a href="/usuarios/novo">Cadastrar Usuario</a>
 <table border="1">
- <tr>
-    <td>ID</td>
-    <td>NickName</td>
-    <td>Nome</td>
- </tr>
- {{#each usuarios}}
+    <tr>
+        <td>ID</td>
+        <td>NickName</td>
+        <td>Nome</td>
+        <th>Ações</th>
+    </tr>
+    {{#each usuarios}}
     <tr>
         <td>{{this.id}}</td>
         <td>{{this.nickname}}</td>
         <td>{{this.nome}}</td>
         <td>
-            <a href="/usuarios/{{this.id}}/atualizar">Atualizar</a>
+            <button><a href="/usuarios/{{this.id}}/atualizar">Atualizar</a></button>
             <form action="/usuarios/excluir" method="post">
-                <input type="text" value="{{this.id}}">
+                <input name="id" type="hidden" value="{{this.id}}" />
                 <input type="submit" value="Excluir">
             </form>
+            <a href="/usuarios/{{this.id}}/cartoes">Ver Cartão</a>
         </td>
     </tr>
- {{/each}}
-</table> 
+    {{/each}}
+</table>
